--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       
 
-      <img class="dashboard-img" src="images/illustration-dashboard.png" alt="" />
+      <img class="dashboard-img" src="images/illustration-dashboard.png" alt="dashboard image" />
       <div class="buttom-container">
       <div class="icons-container">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
