--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
       <p>
-        Thank's for your e-mail!
+        Thank you for your e-mail!
       </p>
     </div>
   </div>
